[gd_scene load_steps=3 format=3 uid="uid://ii4la68fl0si"]

[ext_resource type="Script" uid="uid://re6mbj30kcqs" path="res://scripts/food/ingredients/ingredient_interactive_area.gd" id="1_pqecy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j2ofv"]
radius = 6.0

[node name="IngredientInteractiveArea" type="Area2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_pqecy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_j2ofv")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
